--- a/src/app/chat/components/collocutor-information/collocutor-information.component.scss
+++ b/src/app/chat/components/collocutor-information/collocutor-information.component.scss
@@ -47,7 +47,7 @@
   padding: 0 22px;
   box-sizing: border-box;
   overflow: hidden;
-  p.name {
+  a.name {
     color: #323c47;
     font-family: "Source Sans Pro", sans-serif;
     font-size: 16px;
@@ -56,6 +56,10 @@
     text-align: center;
     margin: 0;
     padding: 0;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     span {
       text-transform: capitalize;
     }
