--- a/src/app/chat/components/message-list/message-list.component.html
+++ b/src/app/chat/components/message-list/message-list.component.html
@@ -22,8 +22,8 @@
         <div class="photo" *ngIf="message.type !== 'systemMessage'">
           <ng-container
             *ngIf="i === 0 || i== messagesList.length-1 || messagesList[i].author !== messagesList[i+1].author">
-            <img *ngIf="message.author === userId" [src]="userAvatar" alt="avatar">
-            <img *ngIf="message.author !== userId" [src]="message.authorAva" alt="avatar">
+            <a [routerLink]="'/user/' + message.author | localize" ><img  *ngIf="message.author === userId" [src]="userAvatar" alt="avatar"></a>
+            <a [routerLink]="'/user/' + message.author | localize" ><img  *ngIf="message.author !== userId" [src]="message.authorAva" alt="avatar"></a>
           </ng-container>
 
         </div>
