--- a/src/app/dashboard-page/dashboard-page.component.html
+++ b/src/app/dashboard-page/dashboard-page.component.html
@@ -34,9 +34,9 @@
       <nav>
         <ng-container *ngFor="let el of dashboardMenu">
           <a class="{{el.class}}"
-            *ngIf="user.role_id === 1 && el.class !== 'catalog' || user.role_id === 2 && el.class !== 'dashboard' && el.class !== 'services'"
+            *ngIf="user.role_id === 1 && el.class !== 'catalog' || user.role_id === 2 && el.class !== 'dashboard' && el.class !== 'services' && el.class !== 'dashboard'"
             [routerLink]="el.link | localize" [routerLinkActive]="'active'" (click)="openChat(el.class)"
-            [ngClass]="{ 'newMessage': newMessage }"><span>{{ el.title }}</span></a>
+            [ngClass]="{ 'new-message': newMessage, 'new-work-message': newWorkMessage }"><span>{{ el.title }}</span></a>
         </ng-container>
 
 
