--- a/src/app/chat/components/messager-tools/messager-tools.component.html
+++ b/src/app/chat/components/messager-tools/messager-tools.component.html
@@ -1,5 +1,5 @@
 <div class="inform" *ngIf="deal">
-  <div class="tools" *ngIf="deal.moneyHolded !==0 && deal.moneyHolded !== undefined">
+  <div class="tools" *ngIf="deal.moneyHolded !==0">
     <h6>Действия</h6>
 
     <button (click)="cencelWork()">отменить работу</button>
