--- a/src/app/chat/components/messager/messager.component.html
+++ b/src/app/chat/components/messager/messager.component.html
@@ -31,6 +31,6 @@
         <button type="submit" class="submit"></button>
       </div>
     </form>
-
+    <app-reait-deal></app-reait-deal>
   </div>
 </div>
