--- a/src/app/catalog-page/catalog/catalog.component.html
+++ b/src/app/catalog-page/catalog/catalog.component.html
@@ -10,9 +10,9 @@
     </ul>
           <!-- <li><a [routerLink]="['/catalog', subcategoriesList.link] | localize">{{ subcategory }}</a></li> -->
   </div>
-  <h2 class="category-title" *ngIf="catalogFilters.subCategory">{{ catalogFilters.subCategory }}</h2>
+  <h2 class="category-title" *ngIf="offersList">{{ offersList.name }}</h2>
   <app-filter [catalogFilters]="catalogFilters"></app-filter>
-  <app-items></app-items>
+  <app-items (outToParent)='receiveFromChild($event)'></app-items>
   <app-catalog-pagination [catalogFilters]="catalogFilters"></app-catalog-pagination>
 
 
