--- a/src/app/service-page/components/service-page-earlier-viewed/service-page-earlier-viewed.component.html
+++ b/src/app/service-page/components/service-page-earlier-viewed/service-page-earlier-viewed.component.html
@@ -4,7 +4,7 @@
   </h4>
   <div class="item-list" *ngIf="similarOffers">
 
-      <div class="card" *ngFor="let offer of similarOffers">
+      <div class="card" *ngFor="let offer of similarOffers.simularOffers">
         <div class="card-preview__bg">
           <img class="card-preview" [src]="offer.mainImage" (click)="openOffer(offer.id)">
         </div>
